public/css/details-property.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Lato:wght@100;300;400;700;900&display=swap');

html,
body {
    scroll-behavior: smooth;
    margin: 0;
    background-color: #f4f1de;
    color: #000;
    font-family: 'Lato', sans-serif;
}

.error-message {
    font-weight: 400;
    color: #e07a5f;
    margin: 5px 0;
}

#header {
    margin-bottom: 0 !important;
}

.container {
    margin: 0 auto;
    padding: 0 1rem;
}

/* Content Grid */
.content-grid {
    display: flex;
    gap: 20px;
    padding: 10px;
}

/* Icon */
.fa-caret-left {
    font-size: 60px;
    margin-left: 30px;
    transition: transform 0.3s ease, color 0.3s ease;
    color: #3d5a80;
    cursor: pointer;
}

.fa-caret-left:hover {
    color: #ffffff;
    transform: translateX(-5px);
}

.content-details-form {
    flex: 1;
}

/* Property Details */
.property-details,
.property-form {
    margin: 5px 0 15px 0;
    border-radius: 8px;
    padding: 20px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

.title {
    font-size: 32px;
    color: #3d5a80;
    margin-bottom: 15px;
    margin-top: 0px;
    font-weight: 400;
}

/* Location */
.location {
    display: flex;
    align-items: center;
    font-size: 18px;
    margin-bottom: 15px;
}

a[data-color="orange"] {
    color: #e07a5f;
}

.location .icon {
    margin-right: 8px;
    animation: pump 0.8s infinite ease-in-out;
    transform-origin: center;

}

@keyframes pump {
    0% {
        transform: scale(1);
        color: #e07a5f;
    }

    25% {
        transform: scale(1.15);
        color: #ff7b54;
    }

    50% {
        transform: scale(1.3);
        color: #ff4e4e;
    }

    75% {
        transform: scale(1.15);
        color: #ff7b54;
    }

    100% {
        transform: scale(1);
        color: #e07a5f;
    }
}

/* Features */
.features {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.feature {
    display: flex;
    align-items: center;
    background-color: #ffffff9c;
    border: 1px solid #3d5a80;
    border-radius: 12px;
    padding: 12px;
    font-size: 18px;
    color: #3d5a80;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    flex: 1 1 220px;
    transition: transform 0.2s;
}

.feature:hover {
    transform: translateY(-3px);
}

.feature .icon {
    color: #e07a5f;
    font-size: 24px;
    margin-right: 10px;
}

.feature .bedrooms {
    display: flex;
    flex-direction: column;
}

/* Description */
.description h2 {
    font-size: 1.8rem;
    font-weight: bold;
    margin-bottom: 5px;
    color: #3d5a80;
    font-weight: 400;

}

.description p {
    margin-bottom: 5px;
    font-size: 18px;
    line-height: 1.7;
    color: #0f0f0f;
}

/* Extra Features */
.extra-features h5 {
    font-size: 1.6em;
    margin: 15px 0 10px 0;
    color: #3d5a80;
    font-weight: 400;
}

.extra-features ul {
    padding: 0;
}

.extra-features ul li {
    font-size: 18px;
    margin-bottom: 5px;
    color: #0f0f0f;
    display: flex;
    align-items: center;
}

.extra-features ul li strong {
    font-weight: 600;
    margin-right: 10px;
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
}

.extra-features ul li i {
    color: #e07a5f;
    margin-right: 8px;
}

/* Contact Form */
.contact-form {
    display: grid;
    gap: 1rem;
    font-weight: 100;
}

#daterange {
    padding: 10px 15px !important;
    width: 38% !important;
    margin: 0 !important;
    background-color: #ffffff9c !important;
    border: 1px solid #0000009c !important;
}

medium {
    display: flex;
    justify-content: flex-end;
    font-weight: bolder;
}

.form-group {
    display: grid;
    gap: 0.5rem;
}

.form-group label {
    font-weight: lighter;
    font-size: 25px;
    font-weight: normal;
}

.form-group input,
.form-group textarea {
    padding: 0.5rem;
    border: 1px solid #3d5a80;
    border-radius: 5px;
    font-size: 20px;
    color: #000;
    background-color: #ffffff9c;
}

.form-group textarea {
    resize: none;
}

b {
    color: #e07a5f;
    font-size: 25px;
}

.contact-form button {
    background-color: #e07a5f;
    color: #fff;
    padding: 0.75rem 1.5rem;
    border: none;
    border-radius: 0.25rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.contact-form button:hover {
    background-color: #cf6247;
}

/* Image Gallery */
.image-gallery {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    overflow-y: auto;
    scrollbar-width: thin;
    height: 1554px;
    border-radius: 8px;
    background-color: #ffffff;
}

.main-image {
    width: 100%;
    border-radius: 0.5rem;
}

.main-image img {
    width: 100%;
    height: auto;
    border-radius: 0.5rem;
}

.main-image:hover {
    transform: scale(1.02);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

/* Thumbnail Gallery */
.thumbnail-gallery {
    flex-grow: 1;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    grid-auto-rows: 150px;
    gap: 0.5rem;
    padding-right: 5px;
    grid-auto-flow: dense;
}

/* Thumbnail Images */
.thumbnail {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 0.5rem;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    will-change: transform;
}

.thumbnail:nth-child(3n) {
    grid-column: span 2;
}

.thumbnail:nth-child(4n) {
    grid-row: span 2;
}

.thumbnail:hover {
    transform: scale(1.02);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

/* Scrollbar */
.thumbnail-gallery::-webkit-scrollbar {
    width: 8px;
}

.thumbnail-gallery::-webkit-scrollbar-thumb {
    background-color: #3d5a80;
    border-radius: 10px;
}

.thumbnail-gallery::-webkit-scrollbar-thumb:hover {
    background-color: #2a4261;
}

#footer {
    width: -webkit-fill-available !important;
}

#total-price {
    color: #e07a5f;
    margin: 5px 0;
    font-weight: 400;
}

/* Popup */
.popup {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
}

.popup-content {
    max-width: 90%;
    max-height: 90%;
}

/* Close Button */
.close {
    position: absolute;
    top: 10px;
    right: 20px;
    color: white;
    font-size: 30px;
    cursor: pointer;
}

/* Navigation Arrows */
.previous,
.next-one {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    color: white;
    font-size: 30px;
    cursor: pointer;
}

.previous {
    left: 10px;
}

.next-one {
    right: 10px;
}

/* Loading Overlay */

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

@media (max-width: 768px) {
    .content-grid {
        flex-direction: column;
    }

    .date-container #daterange {
        width: 50% !important;
    }

}

@media (max-width: 480px) {

    .date-container #daterange {
        width: 80% !important;
    }

    .form-group {
        width: 100%;
    }
}

